<resources>
    <string name="app_name">Тесты</string>
    <string name="attainment">Результаты</string>
    <string name="open_attainment">Open attainment</string>
    <string name="is_complied">Тест пройден</string>
    <string name="RoM">Этот тест покажет на кого Вы больше похожи: на Рика или Морти</string>
    <string name="achievements">Достижения</string>
    <string name="to_test">К тестам</string>
    <string name="back">назад</string>
    <string name="actor_start">Камера, мотор!</string>
    <string name="actor_intro">Многие хотели бы стать звездами кино. Давайте узнаем, какой Вы актер/актриса</string>
    <string name="start">Начать</string>
    <string name="animals">У каждого из нас есть любимчик среди животных, ведь все звери прекрасны. А так ли хорошо Вы их знаете?</string>
    <string name="animals2">Интересные факты о животных\nчасть 2</string>
    <string name="bat">Тест о помощи</string>
    <string name="big_size">В мире есть множество вещей, имеющих аномальный размер. Здесь собраны лишь некоторые из них</string>
    <string name="blue_bird">В этом тесте Вам нужно будет подумать, что произойдет с птицей. Это покажет то, как вы реагируете на трудности и неопределенность в реальной жизни</string>
    <string name="miew">мяу</string>
    <string name="cats">Все мы любим кошек. Но все ли Вам о них известно? Давайте выясним, что скрывают эти создания</string>
    <string name="cats2">В психологии кошка является воплощением души, или же вашим истинным «я». В ответе, который вы выбрали, отражаются положительные и отрицательные аспекты вашей истинной сути</string>
    <string name="go">Кучер! Поехали</string>
    <string name="classic">К русской литературе можно относиться по-разному. Однако некоторые вещи все же стоит читать. Сейчас проверим прочитали ли Вы необходимый минимум</string>
    <string name="confidence">Этот тест поможет вам ответить на вопрос – уверенный ли вы в себе человек или только производите такое впечатление? Выберите один из предложенных вариантов ответа</string>
    <string name="control">Умеете ли Вы себя контролировать? Давайте узнаем</string>
    <string name="country">В какой стране Вам хотелось бы жить больше всего? Давайте узнаем какая страна Вам больше подходит</string>
    <string name="court">В этом тесте мы перенесемся в зал суда</string>
    <string name="egg">Поскольку яйцо — это символ будущего поколения, то выбор яйца показывает, что люди ожидают от детей в будущем</string>
    <string name="begin">begin</string>
    <string name="english">Вы оказались в англоязычной стране. Сможете ли Вы общаться с местными, используя популярные фразы? Здесь собраны 10 таких фраз</string>
    <string name="gods">Все знакомы с древнегреческой мифологией. Она очень интересная. А как хорошо Вы знаете богов, которые к ней относятся?</string>
    <string name="famous">Рассмотрим десятку самых известных личностей, которые внесли вклад в современный мир</string>
    <string name="evolution">Знаете ли Вы теорию эволюции? Здесь представлены 5 основных этапов развития человека и 1 вопрос на засыпку</string>
    <string name="potter">Гарри Поттер вызывает у всех теплые воспоминания. Сколько раз Вы его пересматривали, например, перед новым годом. Проверим, как хорошо Вы знаете эту вселенную</string>
    <string name="hobby">Хобби - это увлечение, занятие, которым занимаются ради удовольствия. Сейчас попробуем определить какое хобби может Вам подойти</string>
    <string name="kids">Иногда дети задают такие вопросы, которые ставят в тупик взрослого. Справитесь с этими вопросами?</string>
    <string name="check">Проверим</string>
    <string name="kosmos">Говорят, что на данный момент мы изучили космос лучше, чем океаны на Земле.\nПроверим?</string>
    <string name="mith">Существует множество мифов, в которые мы верим с детства. Но пора взрослеть! Проверим, насколько вы скептичны</string>
    <string name="mith2">Мифов так много, что пришлось делать вторую часть. Справитесь ли Вы здесь?</string>
    <string name="new_home">Представьте, что вы присмотрели себе подходящее жилище и готовы его купить</string>
    <string name="opening">Многие открытия произошли случайно: по ошибке или невнимательности. Однако некоторые из них перевернули мир. Знаете ли Вы эти открытия?</string>
    <string name="organism">Как хорошо Вы знаете свой организм?</string>
    <string name="physics">Физика очень тесно связана с нашей жизнью. Знаете ли Вы основные законы?</string>
    <string name="picture">Когда с вами неожиданно заговаривает незнакомец, всегда возникает смешанное чувство опасения и ожидания</string>
    <string name="por">Стандартный, но более точный тест определит, кто же Вы:\n пессимист, реалист или оптимист</string>
    <string name="quotes">Ох, эти статусы в социальных сетях…\nЗдесь собраны 10 самых популярных цитат. Сможете ли Вы определить кому они принадлежат?</string>
    <string name="russian">Что русский язык — один из богатейших языков в мире, в этом нет никакого сомнения. — В. Белинский\nПроверим Ваше знание русского языка</string>
    <string name="self">Данный тест позволит определить уровень способностей к саморазвитию и самообразованию</string>
    <string name="gogo">ГО</string>
    <string name="slang">Сейчас молодежь придумывает все новые и новые слова, которые часто не может понять более старшее поколение.\nВ этом тесте Вы узнаете отстаете Вы от жизни или нет</string>
    <string name="jock">Шутка</string>
    <string name="standup">Многие хотели бы попробовать себя в юморе. Посмотрим, получилось бы у Вас</string>
    <string name="tasty">Сладкое и все, чем можно полакомиться на ходу — это еда, которая употребляется в любое время дня и ночи</string>
    <string name="temperament">Каждый человек имеет сочетание двух темпераментов, один из которых - основной, а другой дополнительный. Каждая личность содержит в себе все четыре темперамента, но в разной пропорции. Каждый из них выходит на первый план, в зависимости от ситуации</string>
    <string name="lows">Какие же необычные бывают законы. Тем не менее их обязаны соблюдать.\nСможете ли Вы не нарушить ни одного закона?</string>
    <string name="under_sky">Голубой цвет обладает способностью успокаивать душу. Даже если вы просто представите себе некую картину в голубых тонах, то почувствуете, как ваш пульс замедляется, дыхание становится более глубоким.</string>
    <string name="victim">Причиной комплекса жертвы часто являются токсичные отношения ребенка с родителями в детстве. Из-за того, что его не любили просто так, безусловно, человек начинает думать, что прекрасное чувство необходимо завоевывать. Его выдает склонность уже будучи взрослым попадать в отношения с токсичными личностями, создавать деструктивные отношения</string>
    <string name="survive">Выжить</string>
    <string name="wild_nature">Дикая природа очень опасна. И люди верят в некоторые мифы, которые могут привести к плохим последствиям. Тест проверит готовы ли Вы к дикой природе</string>
    <string name="words">Здесь собраны редкие слова. Сможете ли Вы отличить реальные слова от выдуманных?</string>
    <string name="zol">Самое время вспомнить сказку о Золушке</string>
    <string name="braiiin">Мозгиии!</string>
    <string name="zombie">Давайте выясним, сможете ли Вы выжить в Зомбиленде? Здесь собраны основные правила из фильма</string>
    <string name="test_checked">тест пройден</string>
    <string name="open_explanation">объяснения</string>
    <string name="aRes1">Вряд ли бы из Вас вышел актер\nОднако это всего лишь тест!</string>
    <string name="aRes2">Не Хью Джекман, конечно\nНо неплохо</string>
    <string name="aRes3">Из Вас вышел бы прекрасный актер, если Вы им не являетесь</string>
    <string name="anRes1">Таких интересных фактов Вы не знали, погуглите: там много чего интересного</string>
    <string name="anRes2">Некоторые из этих интересных фактов Вы знаете</string>
    <string name="anRes3">Вы знаете много интересных фактов о животных</string>
    <string name="wrong">неверно</string>
    <string name="next">дальше</string>
    <string name="right">верно</string>
    <string name="batRes1">Вы ведете себя как всезнайка. Нет сомнений — вы всегда хотите протянуть руку помощи или дать совет, но иногда вы пытаетесь помочь в ситуации, когда в вашей помощи не нуждаются, и поэтому в результате выглядите как надоедливый, вмешивающийся во все человек</string>
    <string name="batRes2">Ваше большое сердце и самоотверженность служат для других блестящим примером. Люди чувствуют вашу силу и заботу, и, когда возникает проблема, их успокаивает уже одно лишь ваше присутствие</string>
    <string name="batRes3">Вы сохраняете дистанцию, уважая пространство другого человека. Это не означает, что вы не хотите помочь, просто, когда вас просят дать совет, вы ограничиваетесь абсолютным минимумом, вдохновляя людей решать свои проблемы самостоятельно. И этот принцип невмешательства, возможно, является самым лучшим подходом, когда вы помогаете другим найти свой путь к зрелости и независимости</string>
    <string name="batRes4">Когда вы видите кого-нибудь на земле, ваше первое желание — пнуть его. Возможно, это естественно — чувствовать удовольствие от неудач других людей, но ничего хорошего в этом нет. Ваше отношение не завоюет вам множества друзей и не поможет сохранить тех, что у вас есть. Будьте осторожны</string>
    <string name="rick">Рик</string>
    <string name="rom">Рик или Морти</string>
    <string name="motry">Морти</string>
    <string name="low">Низкий</string>
    <string name="lvlkos">Уровень знания космоса</string>
    <string name="middle">Средний</string>
    <string name="high">Наивысший</string>
    <string name="old">Old</string>
    <string name="attSlang">Шаришь за сленг?</string>
    <string name="norm">Нормуль</string>
    <string name="imb">Имбовый</string>
    <string name="ruslit">Русская литература</string>
    <string name="atClass1">Далек от нее</string>
    <string name="atClass2">Знаком</string>
    <string name="atClass3">Знаток</string>
    <string name="ruslang">Русский язык</string>
    <string name="rusres1">Не родной</string>
    <string name="rusres2">Носитель</string>
    <string name="rusres3">Ломоносов</string>
    <string name="hobbyAtt">Хобби</string>
    <string name="painter">Художник</string>
    <string name="photo">Фотограф</string>
    <string name="chessAtt">Шахматы</string>
    <string name="fishing">Рыбалка</string>
    <string name="blog">Блог</string>
    <string name="yoga">Йога</string>
    <string name="wild_natureAtt">Дикая природа</string>
    <string name="dead">Мертв</string>
    <string name="live">Возможно жив</string>
    <string name="lived">Выжил</string>
    <string name="what_actor">Какой актер</string>
    <string name="bad">Плохой</string>
    <string name="middleAtt">Средний</string>
    <string name="cool">Великолепный</string>
    <string name="what_comic">Какой комик</string>
    <string name="math">Математика</string>
    <string name="mathAtt1">Дошкольник</string>
    <string name="mathAtt2">Школьник</string>
    <string name="mathAtt3">Математик</string>
    <string name="erud">Эрудиция</string>
    <string name="buy">купить</string>
    <string name="info_explanation1">Женские сердца бьются быстрее, чем у мужчин. Миф?\nправда. Женское сердце немного меньше мужского и поэтому бьется быстрее. У мужчин оно совершает в среднем 60–70 ударов в минуту, у женщин – 80–90</string>
    <string name="info_explanation2">Пояснения - это правильные ответы на вопросы и объяснения почему именно этот ответ правильный. Забыли какой-то факт? Не нужно заново проходить тест и лезть в интернет. Заходите в пояснения и смотрите! Узнавайте новое с этими тестами. Также отключается вся реклама и открываются последние два теста в каждой категории</string>
    <string name="open_explanation1">открыть пояснения</string>
    <string name="open_explanation_text_about_lamp">Пояснения также можно открыть, нажав на лампочку в категориях тестов</string>
</resources>